--- a/java/core/pom.xml
+++ b/java/core/pom.xml
@@ -104,7 +104,7 @@
     <testSourceDirectory>${basedir}/src/test</testSourceDirectory>
     <resources>
       <resource>
-	<directory>${basedir}/src/resources</directory>
+        <directory>${basedir}/src/resources</directory>
       </resource>
     </resources>
     <testResources>
@@ -138,6 +138,10 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-shade-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <groupId>io.github.zlika</groupId>
+        <artifactId>reproducible-build-maven-plugin</artifactId>
       </plugin>
     </plugins>
   </build>
