--- a/java/mapreduce/pom.xml
+++ b/java/mapreduce/pom.xml
@@ -111,6 +111,10 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-shade-plugin</artifactId>
       </plugin>
+      <plugin>
+        <groupId>io.github.zlika</groupId>
+        <artifactId>reproducible-build-maven-plugin</artifactId>
+      </plugin>
     </plugins>
   </build>
 
