--- a/java/shims/pom.xml
+++ b/java/shims/pom.xml
@@ -85,6 +85,10 @@
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>build-helper-maven-plugin</artifactId>
       </plugin>
+      <plugin>
+        <groupId>io.github.zlika</groupId>
+        <artifactId>reproducible-build-maven-plugin</artifactId>
+      </plugin>
     </plugins>
   </build>
 
